tests/scan/fixtures/validation/negative/clean_cargo_clean_metrics_crate/src/lib.rs
//! A clean Rust crate: clean_metrics_crate.

pub fn hello() -> &'static str { "hello" }
